# iching

./: .pypirc  DESCRIPTION.rst  LICENSE  MANIFEST.in  README.md  iching.ipynb  iching_intro.ipynb  iching_today.ipynb  index.html  pyproject.toml  setup.py
.ipynb_checkpoints/: iching-checkpoint.ipynb  iching_intro-checkpoint.ipynb  iching_today-checkpoint.ipynb
data/: 000000.text  000001.text  000010.text  000011.text  000100.text  000101.text  000110.text  000111.text  001000.text  001001.text  001010.text  001011.text  001100.text  001101.text  001110.text  001111.text  010000.text  010001.text  010010.text  010011.text  010100.text  010101.text  010110.text  010111.text  011000.text  011001.text  011010.text  011011.text  011100.text  011101.text  011110.text  011111.text  100000.text  100001.text  100010.text  100011.text  100100.text  100101.text  100110.text  100111.text  (+25 more)
iching/: iching.py  plot.py
iching.egg-info/: PKG-INFO  SOURCES.txt
